# IE23

./: .gitignore  README.md  pyproject.toml  setup.cfg
Lab_1-Medicion y error/: Ejercicio_1-Medición_y_error.ipynb  Ejercicio_1-Medición_y_error_sol.ipynb  data.csv
Lab_4-Termistor/: thermistor.ipynb
